--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,12 +5,21 @@ add_executable(duality_rf
     ui/MainWindow.cpp
     ui/WaterfallWidget.cpp
     core/SDRManager.cpp
+    core/SDRReceiver.cpp
     resources.qrc
 )
 
-target_link_libraries(duality_rf PRIVATE SoapySDR Qt6::Widgets)
+target_link_libraries(duality_rf
+    PRIVATE
+        SoapySDR
+        Qt6::Core
+        Qt6::Gui
+        Qt6::Widgets
+        ${FFTW_LIBRARIES}
+)
 target_include_directories(duality_rf PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/ui
     ${CMAKE_CURRENT_SOURCE_DIR}/core
     ${SoapySDR_INCLUDE_DIRS}
+    ${FFTW_INCLUDE_DIRS}
 )
