Help UI box and better placment on sliders

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(duality_rf
     ui/MainWindow.cpp
     ui/WaterfallWidget.cpp
     ui/SpectrumWidget.cpp
+    ui/componenets/InfoDialog.cpp
     core/SDRManager.cpp
     core/SDRReceiver.cpp
     resources.qrc
